myanalyzer.output
Nonterminals useless in grammar

    expr_identifier_hashtag


Rules useless in grammar

  113 expr_identifier_hashtag: %empty


State 72 conflicts: 1 shift/reduce
State 123 conflicts: 1 reduce/reduce
State 130 conflicts: 1 shift/reduce
State 138 conflicts: 1 reduce/reduce
State 182 conflicts: 1 reduce/reduce
State 207 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: program_main

    2 program: %empty
    3        | program declare_comp DELIM_SEMICOLON
    4        | program declare_const DELIM_SEMICOLON
    5        | program declare_var DELIM_SEMICOLON
    6        | program declare_func DELIM_SEMICOLON

    7 program_main: %empty
    8             | program declare_main DELIM_SEMICOLON

    9 $@1: %empty

   10 declare_comp: KEYWORD_COMP IDENTIFIER DELIM_COLON comp_members_var $@1 comp_members_method KEYWORD_ENDCOMP

   11 comp_members_var: %empty
   12                 | member_var
   13                 | comp_members_var member_var

   14 comp_members_method: %empty
   15                    | member_method
   16                    | comp_members_method member_method

   17 member_method: KEYWORD_DEF IDENTIFIER DELIM_LPAR method_arg DELIM_RPAR OP_MINUS OP_BIGGER data_type DELIM_COLON func_body KEYWORD_RETURN expression KEYWORD_ENDDEF DELIM_SEMICOLON
   18              | KEYWORD_DEF IDENTIFIER DELIM_LPAR method_arg DELIM_RPAR DELIM_COLON func_body KEYWORD_ENDDEF DELIM_SEMICOLON

   19 member_var: member_var_identifiers DELIM_COLON data_type DELIM_SEMICOLON
   20           | OP_HASHTAG IDENTIFIER DELIM_LBRAC DELIM_RBRAC DELIM_COLON data_type DELIM_SEMICOLON
   21           | OP_HASHTAG IDENTIFIER DELIM_LBRAC CONST_INTEGER DELIM_RBRAC DELIM_COLON data_type DELIM_SEMICOLON

   22 member_var_identifiers: OP_HASHTAG IDENTIFIER
   23                       | member_var_identifiers DELIM_COMMA OP_HASHTAG IDENTIFIER

   24 method_arg: %empty
   25           | IDENTIFIER DELIM_COLON data_type
   26           | IDENTIFIER DELIM_LBRAC DELIM_RBRAC DELIM_COLON data_type
   27           | func_arg DELIM_COMMA IDENTIFIER DELIM_COLON data_type
   28           | func_arg DELIM_COMMA IDENTIFIER DELIM_LBRAC DELIM_RBRAC DELIM_COLON data_type

   29 declare_const: KEYWORD_CONST expr DELIM_COLON data_type

   30 declare_var: var_identifiers DELIM_COLON data_type
   31            | IDENTIFIER DELIM_LBRAC DELIM_RBRAC DELIM_COLON data_type
   32            | IDENTIFIER DELIM_LBRAC CONST_INTEGER DELIM_RBRAC DELIM_COLON data_type

   33 declare_func: KEYWORD_DEF IDENTIFIER DELIM_LPAR func_arg DELIM_RPAR OP_MINUS OP_BIGGER data_type DELIM_COLON func_body KEYWORD_RETURN expression KEYWORD_ENDDEF
   34             | KEYWORD_DEF IDENTIFIER DELIM_LPAR func_arg DELIM_RPAR DELIM_COLON func_body KEYWORD_ENDDEF

   35 declare_main: KEYWORD_DEF KEYWORD_MAIN DELIM_LPAR DELIM_RPAR DELIM_COLON func_body KEYWORD_ENDDEF

   36 func_body: %empty
   37          | func_body declare_const DELIM_SEMICOLON
   38          | func_body declare_var DELIM_SEMICOLON
   39          | func_body instruction

   40 expression: expr DELIM_SEMICOLON

   41 expr_identifiers: IDENTIFIER
   42                 | OP_HASHTAG IDENTIFIER
   43                 | OP_HASHTAG IDENTIFIER DELIM_LBRAC expr DELIM_RBRAC
   44                 | IDENTIFIER DELIM_LBRAC expr DELIM_RBRAC

   45 expr: data_const
   46     | expr_identifiers
   47     | func_call
   48     | expr_identifiers DELIM_DOT expr
   49     | expr_identifiers DELIM_DOT IDENTIFIER DELIM_LPAR method_n_expr DELIM_RPAR
   50     | DELIM_LPAR expr DELIM_RPAR
   51     | expr OP_POWER expr
   52     | OP_PLUS expr
   53     | OP_MINUS expr
   54     | expr OP_PROD expr
   55     | expr OP_DIV expr
   56     | expr OP_MOD expr
   57     | expr OP_PLUS expr
   58     | expr OP_MINUS expr
   59     | expr OP_SMALLER expr
   60     | expr OP_SMALLER_EQ expr
   61     | expr OP_BIGGER expr
   62     | expr OP_BIGGER_EQ expr
   63     | expr OP_EQUALS expr
   64     | expr OP_NOT_EQUALS expr
   65     | KEYWORD_NOT expr
   66     | expr KEYWORD_AND expr
   67     | expr KEYWORD_OR expr
   68     | expr OP_ASSIGN expr
   69     | expr OP_ASSIGN_PLUS expr
   70     | expr OP_ASSIGN_MINUS expr
   71     | expr OP_ASSIGN_PROD expr
   72     | expr OP_ASSIGN_DIV expr
   73     | expr OP_ASSIGN_MOD expr

   74 method_n_expr: %empty
   75              | expr
   76              | n_expr DELIM_COMMA expr

   77 func_call: IDENTIFIER DELIM_LPAR n_expr DELIM_RPAR

   78 n_expr: %empty
   79       | expr
   80       | n_expr DELIM_COMMA expr

   81 statements: %empty
   82           | statements instruction

   83 instruction: KEYWORD_IF DELIM_LPAR expr DELIM_RPAR DELIM_COLON statements KEYWORD_ENDIF DELIM_SEMICOLON
   84            | KEYWORD_IF DELIM_LPAR expr DELIM_RPAR DELIM_COLON statements KEYWORD_ELSE DELIM_COLON statements KEYWORD_ENDIF DELIM_SEMICOLON
   85            | KEYWORD_FOR IDENTIFIER KEYWORD_IN DELIM_LBRAC expr DELIM_COLON expr DELIM_COLON expr DELIM_RBRAC DELIM_COLON statements KEYWORD_ENDFOR DELIM_SEMICOLON
   86            | KEYWORD_FOR IDENTIFIER KEYWORD_IN DELIM_LBRAC expr DELIM_COLON expr DELIM_RBRAC DELIM_COLON statements KEYWORD_ENDFOR DELIM_SEMICOLON
   87            | IDENTIFIER OP_ASSIGN_ARR DELIM_LBRAC expr KEYWORD_FOR expr DELIM_COLON CONST_INTEGER DELIM_RBRAC DELIM_COLON data_type DELIM_SEMICOLON
   88            | IDENTIFIER OP_ASSIGN_ARR DELIM_LBRAC expr KEYWORD_FOR expr DELIM_COLON data_type KEYWORD_IN IDENTIFIER KEYWORD_OF CONST_INTEGER DELIM_RBRAC DELIM_COLON data_type DELIM_SEMICOLON
   89            | KEYWORD_WHILE DELIM_LPAR expr DELIM_RPAR DELIM_COLON statements KEYWORD_ENDWHILE DELIM_SEMICOLON
   90            | KEYWORD_BREAK DELIM_SEMICOLON
   91            | KEYWORD_CONTINUE DELIM_SEMICOLON
   92            | KEYWORD_RETURN DELIM_SEMICOLON
   93            | KEYWORD_RETURN expr DELIM_SEMICOLON
   94            | DELIM_SEMICOLON
   95            | expression

   96 func_arg: %empty
   97         | IDENTIFIER DELIM_COLON data_type
   98         | IDENTIFIER DELIM_LBRAC DELIM_RBRAC DELIM_COLON data_type
   99         | func_arg DELIM_COMMA IDENTIFIER DELIM_COLON data_type
  100         | func_arg DELIM_COMMA IDENTIFIER DELIM_LBRAC DELIM_RBRAC DELIM_COLON data_type

  101 var_identifiers: IDENTIFIER
  102                | var_identifiers DELIM_COMMA IDENTIFIER

  103 data_type: KEYWORD_INTEGER
  104          | KEYWORD_SCALAR
  105          | KEYWORD_STR
  106          | KEYWORD_BOOL
  107          | IDENTIFIER

  108 data_const: CONST_INTEGER
  109           | CONST_FLOAT
  110           | CONST_STRING
  111           | KEYWORD_TRUE
  112           | KEYWORD_FALSE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    KEYWORD_INTEGER (258) 103
    KEYWORD_SCALAR (259) 104
    KEYWORD_STR (260) 105
    KEYWORD_BOOL (261) 106
    KEYWORD_TRUE (262) 111
    KEYWORD_FALSE (263) 112
    KEYWORD_CONST (264) 29
    KEYWORD_IF (265) 83 84
    KEYWORD_ELSE (266) 84
    KEYWORD_ENDIF (267) 83 84
    KEYWORD_FOR (268) 85 86 87 88
    KEYWORD_IN (269) 85 86 88
    KEYWORD_ENDFOR (270) 85 86
    KEYWORD_WHILE (271) 89
    KEYWORD_ENDWHILE (272) 89
    KEYWORD_BREAK (273) 90
    KEYWORD_CONTINUE (274) 91
    KEYWORD_DEF (275) 17 18 33 34 35
    KEYWORD_ENDDEF (276) 17 18 33 34 35
    KEYWORD_MAIN (277) 35
    KEYWORD_RETURN (278) 17 33 92 93
    KEYWORD_COMP (279) 10
    KEYWORD_ENDCOMP (280) 10
    KEYWORD_OF (281) 88
    DELIM_SEMICOLON (282) 3 4 5 6 8 17 18 19 20 21 37 38 40 83 84 85 86 87 88 89 90 91 92 93 94
    DELIM_COMMA (283) 23 27 28 76 80 99 100 102
    DELIM_COLON (284) 10 17 18 19 20 21 25 26 27 28 29 30 31 32 33 34 35 83 84 85 86 87 88 89 97 98 99 100
    OP_HASHTAG (285) 20 21 22 23 42 43
    CONST_INTEGER <str> (286) 21 32 87 88 108
    CONST_FLOAT <str> (287) 109
    CONST_STRING <str> (288) 110
    IDENTIFIER <str> (289) 10 17 18 20 21 22 23 25 26 27 28 31 32 33 34 41 42 43 44 49 77 85 86 87 88 97 98 99 100 101 102 107
    DELIM_DOT (290) 48 49
    DELIM_LPAR (291) 17 18 33 34 35 49 50 77 83 84 89
    DELIM_RPAR (292) 17 18 33 34 35 49 50 77 83 84 89
    DELIM_LBRAC (293) 20 21 26 28 31 32 43 44 85 86 87 88 98 100
    DELIM_RBRAC (294) 20 21 26 28 31 32 43 44 85 86 87 88 98 100
    OP_POWER (295) 51
    OP_SIGN (296)
    OP_PROD (297) 54
    OP_DIV (298) 55
    OP_MOD (299) 56
    OP_PLUS (300) 52 57
    OP_MINUS (301) 17 33 53 58
    OP_SMALLER (302) 59
    OP_SMALLER_EQ (303) 60
    OP_BIGGER (304) 17 33 61
    OP_BIGGER_EQ (305) 62
    OP_EQUALS (306) 63
    OP_NOT_EQUALS (307) 64
    KEYWORD_NOT (308) 65
    KEYWORD_AND (309) 66
    KEYWORD_OR (310) 67
    OP_ASSIGN (311) 68
    OP_ASSIGN_PLUS (312) 69
    OP_ASSIGN_MINUS (313) 70
    OP_ASSIGN_PROD (314) 71
    OP_ASSIGN_DIV (315) 72
    OP_ASSIGN_MOD (316) 73
    OP_ASSIGN_ARR (317) 87 88


Nonterminals, with rules where they appear

    $accept (63)
        on left: 0
    input (64)
        on left: 1
        on right: 0
    program <str> (65)
        on left: 2 3 4 5 6
        on right: 3 4 5 6 8
    program_main <str> (66)
        on left: 7 8
        on right: 1
    declare_comp <str> (67)
        on left: 10
        on right: 3
    $@1 (68)
        on left: 9
        on right: 10
    comp_members_var <str> (69)
        on left: 11 12 13
        on right: 10 13
    comp_members_method <str> (70)
        on left: 14 15 16
        on right: 10 16
    member_method <str> (71)
        on left: 17 18
        on right: 15 16
    member_var <str> (72)
        on left: 19 20 21
        on right: 12 13
    member_var_identifiers <str> (73)
        on left: 22 23
        on right: 19 23
    method_arg <str> (74)
        on left: 24 25 26 27 28
        on right: 17 18
    declare_const <str> (75)
        on left: 29
        on right: 4 37
    declare_var <str> (76)
        on left: 30 31 32
        on right: 5 38
    declare_func <str> (77)
        on left: 33 34
        on right: 6
    declare_main <str> (78)
        on left: 35
        on right: 8
    func_body <str> (79)
        on left: 36 37 38 39
        on right: 17 18 33 34 35 37 38 39
    expression <str> (80)
        on left: 40
        on right: 17 33 95
    expr_identifiers <str> (81)
        on left: 41 42 43 44
        on right: 46 48 49
    expr <str> (82)
        on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
        on right: 29 40 43 44 48 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 75 76 79 80 83 84 85 86 87 88 89 93
    method_n_expr <str> (83)
        on left: 74 75 76
        on right: 49
    func_call <str> (84)
        on left: 77
        on right: 47
    n_expr <str> (85)
        on left: 78 79 80
        on right: 76 77 80
    statements <str> (86)
        on left: 81 82
        on right: 82 83 84 85 86 89
    instruction <str> (87)
        on left: 83 84 85 86 87 88 89 90 91 92 93 94 95
        on right: 39 82
    func_arg <str> (88)
        on left: 96 97 98 99 100
        on right: 27 28 33 34 99 100
    var_identifiers <str> (89)
        on left: 101 102
        on right: 30 102
    data_type <str> (90)
        on left: 103 104 105 106 107
        on right: 17 19 20 21 25 26 27 28 29 30 31 32 33 87 88 97 98 99 100
    data_const <str> (91)
        on left: 108 109 110 111 112
        on right: 45


State 0

    0 $accept: . input $end
    1 input: . program_main
    2 program: %empty .  [KEYWORD_CONST, KEYWORD_DEF, KEYWORD_COMP, IDENTIFIER]
    3        | . program declare_comp DELIM_SEMICOLON
    4        | . program declare_const DELIM_SEMICOLON
    5        | . program declare_var DELIM_SEMICOLON
    6        | . program declare_func DELIM_SEMICOLON
    7 program_main: %empty .  [$end]
    8             | . program declare_main DELIM_SEMICOLON

    $end      reduce using rule 7 (program_main)
    $default  reduce using rule 2 (program)

    input         go to state 1
    program       go to state 2
    program_main  go to state 3


State 1

    0 $accept: input . $end

    $end  shift, and go to state 4


State 2

    3 program: program . declare_comp DELIM_SEMICOLON
    4        | program . declare_const DELIM_SEMICOLON
    5        | program . declare_var DELIM_SEMICOLON
    6        | program . declare_func DELIM_SEMICOLON
    8 program_main: program . declare_main DELIM_SEMICOLON
   10 declare_comp: . KEYWORD_COMP IDENTIFIER DELIM_COLON comp_members_var $@1 comp_members_method KEYWORD_ENDCOMP
   29 declare_const: . KEYWORD_CONST expr DELIM_COLON data_type
   30 declare_var: . var_identifiers DELIM_COLON data_type
   31            | . IDENTIFIER DELIM_LBRAC DELIM_RBRAC DELIM_COLON data_type
   32            | . IDENTIFIER DELIM_LBRAC CONST_INTEGER DELIM_RBRAC DELIM_COLON data_type
   33 declare_func: . KEYWORD_DEF IDENTIFIER DELIM_LPAR func_arg DELIM_RPAR OP_MINUS OP_BIGGER data_type DELIM_COLON func_body KEYWORD_RETURN expression KEYWORD_ENDDEF
   34             | . KEYWORD_DEF IDENTIFIER DELIM_LPAR func_arg DELIM_RPAR DELIM_COLON func_body KEYWORD_ENDDEF
   35 declare_main: . KEYWORD_DEF KEYWORD_MAIN DELIM_LPAR DELIM_RPAR DELIM_COLON func_body KEYWORD_ENDDEF
  101 var_identifiers: . IDENTIFIER
  102                | . var_identifiers DELIM_COMMA IDENTIFIER

    KEYWORD_CONST  shift, and go to state 5
    KEYWORD_DEF    shift, and go to state 6
    KEYWORD_COMP   shift, and go to state 7
    IDENTIFIER     shift, and go to state 8

    declare_comp     go to state 9
    declare_const    go to state 10
    declare_var      go to state 11
    declare_func     go to state 12
    declare_main     go to state 13
    var_identifiers  go to state 14


State 3

    1 input: program_main .

    $default  reduce using rule 1 (input)


State 4

    0 $accept: input $end .

    $default  accept


State 5

   29 declare_const: KEYWORD_CONST . expr DELIM_COLON data_type
   41 expr_identifiers: . IDENTIFIER
   42                 | . OP_HASHTAG IDENTIFIER
   43                 | . OP_HASHTAG IDENTIFIER DELIM_LBRAC expr DELIM_RBRAC
   44                 | . IDENTIFIER DELIM_LBRAC expr DELIM_RBRAC
   45 expr: . data_const
   46     | . expr_identifiers
   47     | . func_call
   48     | . expr_identifiers DELIM_DOT expr
   49     | . expr_identifiers DELIM_DOT IDENTIFIER DELIM_LPAR method_n_expr DELIM_RPAR
   50     | . DELIM_LPAR expr DELIM_RPAR
   51     | . expr OP_POWER expr
   52     | . OP_PLUS expr
   53     | . OP_MINUS expr
   54     | . expr OP_PROD expr
   55     | . expr OP_DIV expr
   56     | . expr OP_MOD expr
   57     | . expr OP_PLUS expr
   58     | . expr OP_MINUS expr
   59     | . expr OP_SMALLER expr
   60     | . expr OP_SMALLER_EQ expr
   61     | . expr OP_BIGGER expr
   62     | . expr OP_BIGGER_EQ expr
   63     | . expr OP_EQUALS expr
   64     | . expr OP_NOT_EQUALS expr
   65     | . KEYWORD_NOT expr
   66     | . expr KEYWORD_AND expr
   67     | . expr KEYWORD_OR expr
   68     | . expr OP_ASSIGN expr
   69     | . expr OP_ASSIGN_PLUS expr
   70     | . expr OP_ASSIGN_MINUS expr
   71     | . expr OP_ASSIGN_PROD expr
   72     | . expr OP_ASSIGN_DIV expr
   73     | . expr OP_ASSIGN_MOD expr
   77 func_call: . IDENTIFIER DELIM_LPAR n_expr DELIM_RPAR
  108 data_const: . CONST_INTEGER
  109           | . CONST_FLOAT
  110           | . CONST_STRING
  111           | . KEYWORD_TRUE
  112           | . KEYWORD_FALSE

    KEYWORD_TRUE   shift, and go to state 15
    KEYWORD_FALSE  shift, and go to state 16
    OP_HASHTAG     shift, and go to state 17
    CONST_INTEGER  shift, and go to state 18
    CONST_FLOAT    shift, and go to state 19
    CONST_STRING   shift, and go to state 20
    IDENTIFIER     shift, and go to state 21
    DELIM_LPAR     shift, and go to state 22
    OP_PLUS        shift, and go to state 23
    OP_MINUS       shift, and go to state 24
    KEYWORD_NOT    shift, and go to state 25

    expr_identifiers  go to state 26
    expr              go to state 27
    func_call         go to state 28
    data_const        go to state 29


State 6

   33 declare_func: KEYWORD_DEF . IDENTIFIER DELIM_LPAR func_arg DELIM_RPAR OP_MINUS OP_BIGGER data_type DELIM_COLON func_body KEYWORD_RETURN expression KEYWORD_ENDDEF
   34             | KEYWORD_DEF . IDENTIFIER DELIM_LPAR func_arg DELIM_RPAR DELIM_COLON func_body KEYWORD_ENDDEF
   35 declare_main: KEYWORD_DEF . KEYWORD_MAIN DELIM_LPAR DELIM_RPAR DELIM_COLON func_body KEYWORD_ENDDEF

    KEYWORD_MAIN  shift, and go to state 30
    IDENTIFIER    shift, and go to state 31


State 7

   10 declare_comp: KEYWORD_COMP . IDENTIFIER DELIM_COLON comp_members_var $@1 comp_members_method KEYWORD_ENDCOMP

    IDENTIFIER  shift, and go to state 32


State 8

   31 declare_var: IDENTIFIER . DELIM_LBRAC DELIM_RBRAC DELIM_COLON data_type
   32            | IDENTIFIER . DELIM_LBRAC CONST_INTEGER DELIM_RBRAC DELIM_COLON data_type
  101 var_identifiers: IDENTIFIER .  [DELIM_COMMA, DELIM_COLON]

    DELIM_LBRAC  shift, and go to state 33

    $default  reduce using rule 101 (var_identifiers)


State 9

    3 program: program declare_comp . DELIM_SEMICOLON

    DELIM_SEMICOLON  shift, and go to state 34


State 10

    4 program: program declare_const . DELIM_SEMICOLON

    DELIM_SEMICOLON  shift, and go to state 35


State 11

    5 program: program declare_var . DELIM_SEMICOLON

    DELIM_SEMICOLON  shift, and go to state 36


State 12

    6 program: program declare_func . DELIM_SEMICOLON

    DELIM_SEMICOLON  shift, and go to state 37


State 13

    8 program_main: program declare_main . DELIM_SEMICOLON

    DELIM_SEMICOLON  shift, and go to state 38


State 14

   30 declare_var: var_identifiers . DELIM_COLON data_type
  102 var_identifiers: var_identifiers . DELIM_COMMA IDENTIFIER

    DELIM_COMMA  shift, and go to state 39
    DELIM_COLON  shift, and go to state 40


State 15

  111 data_const: KEYWORD_TRUE .

    $default  reduce using rule 111 (data_const)


State 16

  112 data_const: KEYWORD_FALSE .

    $default  reduce using rule 112 (data_const)


State 17

   42 expr_identifiers: OP_HASHTAG . IDENTIFIER
   43                 | OP_HASHTAG . IDENTIFIER DELIM_LBRAC expr DELIM_RBRAC

    IDENTIFIER  shift, and go to state 41


State 18

  108 data_const: CONST_INTEGER .

    $default  reduce using rule 108 (data_const)


State 19

  109 data_const: CONST_FLOAT .

    $default  reduce using rule 109 (data_const)


State 20

  110 data_const: CONST_STRING .

    $default  reduce using rule 110 (data_const)


State 21

   41 expr_identifiers: IDENTIFIER .  [KEYWORD_FOR, DELIM_SEMICOLON, DELIM_COMMA, DELIM_COLON, DELIM_DOT, DELIM_RPAR, DELIM_RBRAC, OP_POWER, OP_PROD, OP_DIV, OP_MOD, OP_PLUS, OP_MINUS, OP_SMALLER, OP_SMALLER_EQ, OP_BIGGER, OP_BIGGER_EQ, OP_EQUALS, OP_NOT_EQUALS, KEYWORD_AND, KEYWORD_OR, OP_ASSIGN, OP_ASSIGN_PLUS, OP_ASSIGN_MINUS, OP_ASSIGN_PROD, OP_ASSIGN_DIV, OP_ASSIGN_MOD]
   44                 | IDENTIFIER . DELIM_LBRAC expr DELIM_RBRAC
   77 func_call: IDENTIFIER . DELIM_LPAR n_expr DELIM_RPAR

    DELIM_LPAR   shift, and go to state 42
    DELIM_LBRAC  shift, and go to state 43

    $default  reduce using rule 41 (expr_identifiers)


State 22

   41 expr_identifiers: . IDENTIFIER
   42                 | . OP_HASHTAG IDENTIFIER
   43                 | . OP_HASHTAG IDENTIFIER DELIM_LBRAC expr DELIM_RBRAC
   44                 | . IDENTIFIER DELIM_LBRAC expr DELIM_RBRAC
   45 expr: . data_const
   46     | . expr_identifiers
   47     | . func_call
   48     | . expr_identifiers DELIM_DOT expr
   49     | . expr_identifiers DELIM_DOT IDENTIFIER DELIM_LPAR method_n_expr DELIM_RPAR
   50     | . DELIM_LPAR expr DELIM_RPAR
   50     | DELIM_LPAR . expr DELIM_RPAR
   51     | . expr OP_POWER expr
   52     | . OP_PLUS expr
   53     | . OP_MINUS expr
   54     | . expr OP_PROD expr
   55     | . expr OP_DIV expr
   56     | . expr OP_MOD expr
   57     | . expr OP_PLUS expr
   58     | . expr OP_MINUS expr
   59     | . expr OP_SMALLER expr
   60     | . expr OP_SMALLER_EQ expr
   61     | . expr OP_BIGGER expr
   62     | . expr OP_BIGGER_EQ expr
   63     | . expr OP_EQUALS expr
   64     | . expr OP_NOT_EQUALS expr
   65     | . KEYWORD_NOT expr
   66     | . expr KEYWORD_AND expr
   67     | . expr KEYWORD_OR expr
   68     | . expr OP_ASSIGN expr
   69     | . expr OP_ASSIGN_PLUS expr
   70     | . expr OP_ASSIGN_MINUS expr
   71     | . expr OP_ASSIGN_PROD expr
   72     | . expr OP_ASSIGN_DIV expr
   73     | . expr OP_ASSIGN_MOD expr
   77 func_call: . IDENTIFIER DELIM_LPAR n_expr DELIM_RPAR
  108 data_const: . CONST_INTEGER
  109           | . CONST_FLOAT
  110           | . CONST_STRING
  111           | . KEYWORD_TRUE
  112           | . KEYWORD_FALSE

    KEYWORD_TRUE   shift, and go to state 15
    KEYWORD_FALSE  shift, and go to state 16
    OP_HASHTAG     shift, and go to state 17
    CONST_INTEGER  shift, and go to state 18
    CONST_FLOAT    shift, and go to state 19
    CONST_STRING   shift, and go to state 20
    IDENTIFIER     shift, and go to state 21
    DELIM_LPAR     shift, and go to state 22
    OP_PLUS        shift, and go to state 23
    OP_MINUS       shift, and go to state 24
    KEYWORD_NOT    shift, and go to state 25

    expr_identifiers  go to state 26
    expr              go to state 44
    func_call         go to state 28
    data_const        go to state 29


State 23

   41 expr_identifiers: . IDENTIFIER
   42                 | . OP_HASHTAG IDENTIFIER
   43                 | . OP_HASHTAG IDENTIFIER DELIM_LBRAC expr DELIM_RBRAC
   44                 | . IDENTIFIER DELIM_LBRAC expr DELIM_RBRAC
   45 expr: . data_const
   46     | . expr_identifiers
   47     | . func_call
   48     | . expr_identifiers DELIM_DOT expr
   49     | . expr_identifiers DELIM_DOT IDENTIFIER DELIM_LPAR method_n_expr DELIM_RPAR
   50     | . DELIM_LPAR expr DELIM_RPAR
   51     | . expr OP_POWER expr
   52     | . OP_PLUS expr
   52     | OP_PLUS . expr
   53     | . OP_MINUS expr
   54     | . expr OP_PROD expr
   55     | . expr OP_DIV expr
   56     | . expr OP_MOD expr
   57     | . expr OP_PLUS expr
   58     | . expr OP_MINUS expr
   59     | . expr OP_SMALLER expr
   60     | . expr OP_SMALLER_EQ expr
   61     | . expr OP_BIGGER expr
   62     | . expr OP_BIGGER_EQ expr
   63     | . expr OP_EQUALS expr
   64     | . expr OP_NOT_EQUALS expr
   65     | . KEYWORD_NOT expr
   66     | . expr KEYWORD_AND expr
   67     | . expr KEYWORD_OR expr
   68     | . expr OP_ASSIGN expr
   69     | . expr OP_ASSIGN_PLUS expr
   70     | . expr OP_ASSIGN_MINUS expr
   71     | . expr OP_ASSIGN_PROD expr
   72     | . expr OP_ASSIGN_DIV expr
   73     | . expr OP_ASSIGN_MOD expr
   77 func_call: . IDENTIFIER DELIM_LPAR n_expr DELIM_RPAR
  108 data_const: . CONST_INTEGER
  109           | . CONST_FLOAT
  110           | . CONST_STRING
  111           | . KEYWORD_TRUE
  112           | . KEYWORD_FALSE

    KEYWORD_TRUE   shift, and go to state 15
    KEYWORD_FALSE  shift, and go to state 16
    OP_HASHTAG     shift, and go to state 17
    CONST_INTEGER  shift, and go to state 18
    CONST_FLOAT    shift, and go to state 19
    CONST_STRING   shift, and go to state 20
    IDENTIFIER     shift, and go to state 21
    DELIM_LPAR     shift, and go to state 22
    OP_PLUS        shift, and go to state 23
    OP_MINUS       shift, and go to state 24
    KEYWORD_NOT    shift, and go to state 25

    expr_identifiers  go to state 26
    expr              go to state 45
    func_call         go to state 28
    data_const        go to state 29


State 24

   41 expr_identifiers: . IDENTIFIER
   42                 | . OP_HASHTAG IDENTIFIER
   43                 | . OP_HASHTAG IDENTIFIER DELIM_LBRAC expr DELIM_RBRAC
   44                 | . IDENTIFIER DELIM_LBRAC expr DELIM_RBRAC
   45 expr: . data_const
   46     | . expr_identifiers
   47     | . func_call
   48     | . expr_identifiers DELIM_DOT expr
   49     | . expr_identifiers DELIM_DOT IDENTIFIER DELIM_LPAR method_n_expr DELIM_RPAR
   50     | . DELIM_LPAR expr DELIM_RPAR
   51     | . expr OP_POWER expr
   52     | . OP_PLUS expr
   53     | . OP_MINUS expr
   53     | OP_MINUS . expr
   54     | . expr OP_PROD expr
   55     | . expr OP_DIV expr
   56     | . expr OP_MOD expr
   57     | . expr OP_PLUS expr
   58     | . expr OP_MINUS expr
   59     | . expr OP_SMALLER expr
   60     | . expr OP_SMALLER_EQ expr
   61     | . expr OP_BIGGER expr
   62     | . expr OP_BIGGER_EQ expr
   63     | . expr OP_EQUALS expr
   64     | . expr OP_NOT_EQUALS expr
   65     | . KEYWORD_NOT expr
   66     | . expr KEYWORD_AND expr
   67     | . expr KEYWORD_OR expr
   68     | . expr OP_ASSIGN expr
   69     | . expr OP_ASSIGN_PLUS expr
   70     | . expr OP_ASSIGN_MINUS expr
   71     | . expr OP_ASSIGN_PROD expr
   72     | . expr OP_ASSIGN_DIV expr
   73     | . expr OP_ASSIGN_MOD expr
   77 func_call: . IDENTIFIER DELIM_LPAR n_expr DELIM_RPAR
  108 data_const: . CONST_INTEGER
  109           | . CONST_FLOAT
  110           | . CONST_STRING
  111           | . KEYWORD_TRUE
  112           | . KEYWORD_FALSE

    KEYWORD_TRUE   shift, and go to state 15
    KEYWORD_FALSE  shift, and go to state 16
    OP_HASHTAG     shift, and go to state 17
    CONST_INTEGER  shift, and go to state 18
    CONST_FLOAT    shift, and go to state 19
    CONST_STRING   shift, and go to state 20
    IDENTIFIER     shift, and go to state 21
    DELIM_LPAR     shift, and go to state 22
    OP_PLUS        shift, and go to state 23
    OP_MINUS       shift, and go to state 24
    KEYWORD_NOT    shift, and go to state 25

    expr_identifiers  go to state 26
    expr              go to state 46
    func_call         go to state 28
    data_const        go to state 29


State 25

   41 expr_identifiers: . IDENTIFIER
   42                 | . OP_HASHTAG IDENTIFIER
   43                 | . OP_HASHTAG IDENTIFIER DELIM_LBRAC expr DELIM_RBRAC
   44                 | . IDENTIFIER DELIM_LBRAC expr DELIM_RBRAC
   45 expr: . data_const
   46     | . expr_identifiers
   47     | . func_call
   48     | . expr_identifiers DELIM_DOT expr
   49     | . expr_identifiers DELIM_DOT IDENTIFIER DELIM_LPAR method_n_expr DELIM_RPAR
   50     | . DELIM_LPAR expr DELIM_RPAR
   51     | . expr OP_POWER expr
   52     | . OP_PLUS expr
   53     | . OP_MINUS expr
   54     | . expr OP_PROD expr
   55     | . expr OP_DIV expr
   56     | . expr OP_MOD expr
   57     | . expr OP_PLUS expr
   58     | . expr OP_MINUS expr
   59     | . expr OP_SMALLER expr
   60     | . expr OP_SMALLER_EQ expr
   61     | . expr OP_BIGGER expr
   62     | . expr OP_BIGGER_EQ expr
   63     | . expr OP_EQUALS expr
   64     | . expr OP_NOT_EQUALS expr
   65     | . KEYWORD_NOT expr
   65     | KEYWORD_NOT . expr
   66     | . expr KEYWORD_AND expr
   67     | . expr KEYWORD_OR expr
   68     | . expr OP_ASSIGN expr
   69     | . expr OP_ASSIGN_PLUS expr
   70     | . expr OP_ASSIGN_MINUS expr
   71     | . expr OP_ASSIGN_PROD expr
   72     | . expr OP_ASSIGN_DIV expr
   73     | . expr OP_ASSIGN_MOD expr
   77 func_call: . IDENTIFIER DELIM_LPAR n_expr DELIM_RPAR
  108 data_const: . CONST_INTEGER
  109           | . CONST_FLOAT
  110           | . CONST_STRING
  111           | . KEYWORD_TRUE
  112           | . KEYWORD_FALSE

    KEYWORD_TRUE   shift, and go to state 15
    KEYWORD_FALSE  shift, and go to state 16
    OP_HASHTAG     shift, and go to state 17
    CONST_INTEGER  shift, and go to state 18
    CONST_FLOAT    shift, and go to state 19
    CONST_STRING   shift, and go to state 20
    IDENTIFIER     shift, and go to state 21
    DELIM_LPAR     shift, and go to state 22
    OP_PLUS        shift, and go to state 23
    OP_MINUS       shift, and go to state 24
    KEYWORD_NOT    shift, and go to state 25

    expr_identifiers  go to state 26
    expr              go to state 47
    func_call         go to state 28
    data_const        go to state 29


State 26
